# ModelBridge

./: .gitignore  AGENT.md  BUG.md  LICENSE  README.md  manifest.json  pyproject.toml  sidepanel.js
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: mcp-architecture.md
examples/: config.example.yaml  pricing.example.yaml
extension/: README.md  background.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
modelbridge/: __init__.py  cli.py  cli_compat.py  cli_console.py  client.py  config.py  doctor.py  error_hints.py  images.py  models.py  provider_profiles.py  raw_logger.py  schemas.py  secrets.py  updater.py  utils.py
modelbridge/agent/: __init__.py  at_completer.py  commands.py  context.py  loop.py  mentions.py  security.py  session.py  thinking.py  ui.py
modelbridge/bridge/: __init__.py  browser_bridge.py  cli.py  control.py  host.py  install.py  protocol.py  session_runner.py
modelbridge/cache/: __init__.py  manager.py
modelbridge/context/: __init__.py  budget.py  windows.py
modelbridge/cost/: __init__.py  budget.py  estimator.py
modelbridge/editor/: __init__.py  backup.py  diff_parser.py  edit_prompt.py  patch_applier.py  safety.py
npm/: .gitignore  .npmrc.example  README.md  package.json
packaging/: README.md  build_linux.sh  build_macos.sh  build_windows.bat  build_windows.ps1  installer.iss  mbridge.spec  mbridge_entry.py
tests/: mcp_fake_server.py  test_agent_loop_interrupt.py  test_ask_image.py  test_at_completer.py  test_bash_tool_encoding.py  test_bridge_browser_bridge.py  test_bridge_control.py  test_bridge_host.py  test_bridge_protocol.py  test_bridge_session_runner.py  test_browser_tools_approval.py  test_builder_history_filter.py  test_builder_images.py  test_builder_prefix_hash.py  test_catalog_resource_collision.py  test_classifier.py  test_classifier_routing.py  test_cli_ia_acceptance.py  test_cli_ia_r1.py  test_cli_ia_r2a.py  test_cli_ia_r2b.py  test_cli_ia_r3a.py  test_cli_ia_r3b.py  test_cli_smoke.py  test_command_validator.py  test_debug_command.py  test_diff_parser.py  test_extra_messages.py  test_file_index.py  test_file_tools.py  test_images.py  test_llm_classifier.py  test_llm_classifier_robustness.py  test_mcp.py  test_mcp_advanced.py  test_mcp_config_validation.py  test_mcp_route_tool.py  test_mcp_server_reconfigure.py  test_mentions.py  test_mentions_images.py  (+22 more)
(+95 files in other folders)
