[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelbridge"
version = "1.2.0"
description = "ModelBridge: a China-first AI Coding Agent compatibility gateway / Agent Proxy / CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ModelBridge Contributors" }]
keywords = [
    "llm",
    "ai-agent",
    "coding-agent",
    "openai-compatible",
    "deepseek",
    "qwen",
    "kimi",
    "mimo",
    "glm",
    "minimax",
    "ollama",
    "vllm",
    "lmstudio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",  # @file 提及的实时补全 (REPL)；无 TTY 时自动回退
    "keyring>=24.0",       # OS credential vault for api_key (preferred)
    "cryptography>=42.0",  # Fernet fallback when no keyring backend
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
]
# 仅 @paste 剪贴板读图用到；其余图像功能（路径/URL）零额外依赖。
vision = ["Pillow>=10.0"]

[project.scripts]
mbridge = "modelbridge.cli:app"
modelbridge = "modelbridge.cli:app"
mbridge-bridge = "modelbridge.bridge.host:main"

[project.urls]
Homepage = "https://github.com/CrisXie4/ModelBridge"
Issues = "https://github.com/CrisXie4/ModelBridge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelbridge*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Re-export hubs deliberately import names they don't reference locally.
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
# Existing code isn't fully typed yet; keep mypy informative, not blocking.
# CI runs this job with continue-on-error until the codebase is annotated.
check_untyped_defs = false
